hard-coded path again for the moment

--- a/vhosts.conf
+++ b/vhosts.conf
@@ -19,7 +19,7 @@ NameVirtualHost *:80
     ServerName local.dev
     ServerAlias *.dev
     UseCanonicalName off
-    VirtualDocumentRoot /tmbr/web/%-2.0.dev/html/
+    VirtualDocumentRoot /Users/matt/web/%-2.0.dev/html/
     <FilesMatch .*\.js.gz$>
         ForceType text/javascript
         Header set Content-Encoding: gzip
@@ -28,7 +28,7 @@ NameVirtualHost *:80
         ForceType text/css
         Header set Content-Encoding: gzip
     </FilesMatch>
-    <Directory "/tmbr/web/*/html/">
+    <Directory "/Users/matt/web/*/html/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order Allow,Deny
@@ -44,7 +44,7 @@ NameVirtualHost *:80
 
     # Use -8 if you want to use {blah}.dev.127.0.0.1
     # Use -7 if you want to only use {blah}.127.0.0.1
-    VirtualDocumentRoot /tmbr/web/%-8.0.dev/html/
+    VirtualDocumentRoot /Users/matt/web/%-8.0.dev/html/
     <FilesMatch .*\.js.gz$>
         ForceType text/javascript
         Header set Content-Encoding: gzip
@@ -53,7 +53,7 @@ NameVirtualHost *:80
         ForceType text/css
         Header set Content-Encoding: gzip
     </FilesMatch>
-    <Directory "/tmbr/web/*/html/">
+    <Directory "/Users/matt/web/*/html/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order Allow,Deny
