enabling the /tmbr/web/ webroot by allowing symlinks on /

--- a/vhosts.conf
+++ b/vhosts.conf
@@ -1,5 +1,10 @@
 NameVirtualHost *:80
 
+# Allow for the /tmbr/ symlink to be read and followed
+<Directory "/">
+    Options FollowSymLinks
+</Directory>
+
 # Shortcuts to various server info pages
 
 <Location /server-info>
@@ -19,7 +24,7 @@ NameVirtualHost *:80
     ServerName local.dev
     ServerAlias *.dev
     UseCanonicalName off
-    VirtualDocumentRoot /Users/matt/web/%-2.0.dev/html/
+    VirtualDocumentRoot /tmbr/web/%-2.0.dev/html/
     <FilesMatch .*\.js.gz$>
         ForceType text/javascript
         Header set Content-Encoding: gzip
@@ -28,7 +33,7 @@ NameVirtualHost *:80
         ForceType text/css
         Header set Content-Encoding: gzip
     </FilesMatch>
-    <Directory "/Users/matt/web/*/html/">
+    <Directory "/tmbr/web/*/html/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order Allow,Deny
@@ -44,7 +49,7 @@ NameVirtualHost *:80
 
     # Use -8 if you want to use {blah}.dev.127.0.0.1
     # Use -7 if you want to only use {blah}.127.0.0.1
-    VirtualDocumentRoot /Users/matt/web/%-8.0.dev/html/
+    VirtualDocumentRoot /tmbr/web/%-8.0.dev/html/
     <FilesMatch .*\.js.gz$>
         ForceType text/javascript
         Header set Content-Encoding: gzip
@@ -53,7 +58,7 @@ NameVirtualHost *:80
         ForceType text/css
         Header set Content-Encoding: gzip
     </FilesMatch>
-    <Directory "/Users/matt/web/*/html/">
+    <Directory "/tmbr/web/*/html/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order Allow,Deny
